# fastapi-template

./: pyproject.toml
alembic/: env.py
src/: config.py
src/database/: engine.py
