[tool.poetry]
name = "fastapi-template"
version = "0.1.0"
description = "A ready to use fastapi template"
authors = ["Jérémie <jeremie.jourda202@gmail.com>"]
readme = "README.md"
packages = [{ include = "fastapi_template" }]

[tool.poetry.dependencies]
python = "^3.11"
SQLAlchemy = "^2.0.19"
pydantic = "^2.1.1"
fastapi = "^0.101.0"
pydantic-settings = "^2.0.2"

[tool.poetry.group.dev.dependencies]
pytest = "^7.4.0"
alembic = "^1.11.2"
ruff = "^0.0.282"

[tool.isort]
profile = "black"
known_first_party = ["config", "alembic"]

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
